@@ -1,3 +1,7 @@
+Fri Dec 10 15:11:39 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* reference.rb: ModuleReferenceの同一性がくずれていた.
+
 Wed Dec  8 22:48:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* reference.rb: クラスリファレンスに対する定数取り出しを可能にした.
